--- a/tutorials/atlas-tutorial2.yml
+++ b/tutorials/atlas-tutorial2.yml
@@ -3,7 +3,7 @@ version: '3.6'
 services:
 
    atlas:
-      image: sburn/apache-atlas
+      image: sburn/apache-atlas:2.1.0
       container_name: atlas
       command: /opt/apache-atlas-2.1.0/bin/atlas_start.py
       ports: 
